iconSidebar left scrollbar fix

--- a/gmxApplication.css
+++ b/gmxApplication.css
@@ -64,4 +64,4 @@
 
 .gmxApplication_withLeftSidebar.gmxApplication_sidebarShift .leaflet-left .leaflet-control { margin-left: 325px; }
 .gmxApplication_withLeftSidebar.gmxApplication_sidebarShift .leaflet-left.leaflet-right .leaflet-control { margin-left: 0px; }
-.gmxApplication_withLeftSidebar .iconSidebarWidget .jspVerticalBar { left: 0; }
+.gmxApplication_withLeftSidebar .iconSidebarControl .jspVerticalBar { left: 0; }
